# mijia-control

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.ble  Dockerfile.homekit  Dockerfile.mcp  LICENSE  README.md  README_EN.md  README_ES.md  README_JA.md  README_KO.md  docker-compose.yml  glama.json  go2rtc.yaml  homekit_mapping.yaml.example  mijia_cli.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py  extensions.py
app/api/: __init__.py  auth.py  auth_jwt.py  automations.py  ble.py  device_groups.py  devices.py  devices_v1_20260501.py  devices_v1_20260502.py  energy.py  homes.py  scenes.py  tokens.py  xiaomi_auth.py
app/ble/: __init__.py  __main__.py  bindkey.py  config.py  parser.py  scanner.py
app/cli/: __init__.py
app/homekit/: __init__.py  __main__.py  accessories.py  bridge.py  mapper.py
app/models/: __init__.py  api_token.py  automation_rule.py  ble_device.py  ble_reading.py  device_cache.py  device_group.py  energy_log.py  home_cache.py  scene_cache.py  user.py  xiaomi_auth.py
app/schemas/: auth.py  device.py  token.py
app/services/: admin_service.py  auth_service.py  automation_service.py  ble_service.py  device_group_service.py  device_service.py  device_service_v1_20260501.py  energy_poller.py  energy_service.py  home_service.py  scene_service.py  xiaomi_auth_service.py
config/: __init__.py
docs/: ble.md  homekit.md
mcp_server/: __main__.py  server.py
migrations/: env.py
tests/: test_device_service_timeout.py  test_homekit_mapper.py
(+45 files in other folders)
