[project]
name = "mijia-control"
version = "1.0.2"
description = "MijiaPilot - 米家 x MCP x AI Agent x HomeKit 全桥接智能家居平台"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "flask-login>=0.6",
    "flask-jwt-extended>=4.6",
    "flask-wtf>=1.2",
    "flask-limiter>=3.5",
    "pymysql>=1.1",
    "cryptography>=42.0",
    "marshmallow>=3.21",
    "flasgger>=0.9",
    "flask-socketio>=5.3",
    "click>=8.1",
    "python-dotenv>=1.0",
    "mijiaAPI>=3.0",
    "httpx>=0.27",
    "eventlet>=0.36",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=5.0",
    "ruff>=0.14",
]
mcp = [
    "mcp[cli]>=1.6",
    "httpx>=0.27",
]
homekit = [
    "HAP-python[QRCode]>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]
ble = [
    "bleak>=0.22",
    "pycryptodome>=3.20",
    "httpx>=0.27",
]

[project.scripts]
mijia-control = "mijia_cli:cli"
mijia-mcp = "mcp_server:mcp.run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mijia_cli"]

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
